# malarkdowney

./: .gitignore  readme.md
.github/workflows/: pages.yaml
source/: build.sh  build_static.sh  dev_server.sh
source/native/: Cargo.toml
source/wasm/: Cargo.toml  build.rs  inline.rustemo  notes.md
source/wasm/prestatic/: index.html  malarkdowney.css  style.css
source/wasm/src/: dom.rs  lib.rs  linemarkdown.rs  main.md  shadowdom.rs
source/wasm/src/malarkdowney/: dom.rs  linemarkdown.rs  mod.rs  shadowdom.rs
