[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
gloo = { version = "0.9", features = [
    "futures",
    "utils",
    "events",
], default-features = false }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "DomRect",
    "Range",
    "Selection",
    "CssStyleDeclaration",
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    "NodeList",
    "Text",
    "console",
    "KeyboardEvent",
    "CaretPosition",
] }
futures = "0.3"
rooting = { version = "0.1", features = ["futures"] }
const_format = "0.2"
flowcontrol = "0.2"
serde_json = "1"
serde = "1"
regex = "1.11.0"
structre = "0.1.3"
