[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
gloo = { version = "0.9", features = [
    "timers",
    "utils",
    "events",
], default-features = false }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "DomRect",
    "Range",
    "Selection",
    "CssStyleDeclaration",
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    "NodeList",
    "Text",
    "console",
    "KeyboardEvent",
    "CaretPosition",
] }
rooting = { version = "0.1" }
const_format = "0.2"
flowcontrol = "0.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
regex = { version = "1", default-features = false }
structre = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
